修改一些引用规范问题

--- a/demo/jke.html
+++ b/demo/jke.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>更多效果</title>
-    <link href="jkef.css" rel="stylesheet" type="text/css">
+    <link href="css/jkef.css" rel="stylesheet" type="text/css">
 </head>
 <script type="text/javascript">
     function kkk(kk){
